--- a/chamber/styles/form.css
+++ b/chamber/styles/form.css
@@ -29,7 +29,7 @@ main > p {
   padding: 2.5rem 2rem 2rem 2rem;
 }
 
-.join-section h2 {
+.join-section h1 {
   color: var(--color-secondary);
   text-align: center;
 }
@@ -37,6 +37,8 @@ main > p {
 .join-section > p {
   color: var(--color-text);
   text-align: center;
+  font-weight: var(--font-weight-bold);
+  margin-bottom: 2rem;
 }
 
 .join-form {
